# ask-acme

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.in  requirements.txt
corpus/: README.md
corpus/engineering/: coding_standards.md  design_doc_redpanda_migration.md  fleet_api_reference.md  fleet_manager_architecture.md  glossary.md  oncall_runbook_telemetry.md  postmortem_battery_aug18.md  tech_debt_register.md  weekly_sync_oct14.md
corpus/finance/: expense_policy.md  q3_2024_board_update.md  vendor_list.md
corpus/hr/: compensation_bands_2024.md  new_hire_onboarding.md  performance_review_process.md  pto_policy.md
corpus/product/: competitive_analysis.md  customer_faq.md  roadmap_2025.md  sap_ewm_integration_guide.md
corpus/public/: about_acme.md  careers.md  customer_story_wendell.md  engineering_blog_reliability.md  press_release_northwind.md  wx7_product_overview.md
docs/: README.md
docs/hld/: HLD.md
docs/hld/diagrams/: 02_system_context.md  03a_container_static.md  03b_query_path.md  03c_ingestion_path.md  04_data_model.md  05_1_query_flow.md  05_2_ingestion_flow.md  05_3_permission_change.md
docs/prd/: PRD.md
src/ask_acme/: config.py
